[package]
name = "gcmalloc"
version = "0.1.0"
authors = ["Jacob Hughes <jh@jakehughes.uk>"]
edition = "2018"

[dependencies]
libc = "*"
packed_struct = "0.3"
packed_struct_codegen = "0.3"

[build-dependencies]
rerun_except = "0.1"
cc = "1.0"

[dev-dependencies]
lang_tester = "0.3"
tempdir = "0.3"

[[test]]
name = "gc_tests"
path = "gc_tests/run_tests.rs"
harness = false
