[package]
name = "gcmalloc"
version = "0.1.0"
authors = ["Jacob Hughes <jh@jakehughes.uk>"]
edition = "2018"

[dependencies]
libc = "*"
packed_struct = "0.3"
packed_struct_codegen = "0.3"
parking_lot = { version = "0.10", features = ["nightly"] }
static_assertions = "1.1"
trace_derive = { path = "trace_derive" }

[build-dependencies]
rerun_except = "0.1"
cc = "1.0"

[dev-dependencies]
lang_tester = "0.3"
tempdir = "0.3"

[[test]]
name = "gc_tests"
path = "gc_tests/run_tests.rs"
harness = false

[[test]]
name = "miri_tests"
path = "gc_tests/run_miri_tests.rs"
harness = false

[workspace]
